[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lightning = { git = "https://github.com/lightningdevkit/rust-lightning", rev ="f9b8d630c579d76ec85e283bdd0fd0c9408a7474", features = ["dnssec"] }
lightning-invoice = { git = "https://github.com/lightningdevkit/rust-lightning", rev ="f9b8d630c579d76ec85e283bdd0fd0c9408a7474", features = ["std"] }
lightning-net-tokio = { git = "https://github.com/lightningdevkit/rust-lightning", rev ="f9b8d630c579d76ec85e283bdd0fd0c9408a7474" }
lightning-persister = { git = "https://github.com/lightningdevkit/rust-lightning", rev ="f9b8d630c579d76ec85e283bdd0fd0c9408a7474" }
lightning-background-processor = { git = "https://github.com/lightningdevkit/rust-lightning", rev ="f9b8d630c579d76ec85e283bdd0fd0c9408a7474", features = ["futures"] }
lightning-rapid-gossip-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "f9b8d630c579d76ec85e283bdd0fd0c9408a7474" }
lightning-block-sync = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "f9b8d630c579d76ec85e283bdd0fd0c9408a7474", features = ["rpc-client", "tokio"] }
lightning-macros = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "f9b8d630c579d76ec85e283bdd0fd0c9408a7474" }
lightning-dns-resolver = { git = "https://github.com/lightningdevkit/rust-lightning", rev = "f9b8d630c579d76ec85e283bdd0fd0c9408a7474" }

base64 = "0.13.0"
bitcoin = "0.32"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
libc = "0.2"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
