[package]
name = "ldk-sample"
version = "0.1.0"
authors = ["Valentine Wallace <vwallace@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightning = { version = "0.2.0", features = ["dnssec"] }
lightning-block-sync = { version = "0.2.0", features = [ "rpc-client", "tokio" ] }
lightning-dns-resolver = { version = "0.3.0" }
lightning-invoice = { version = "0.34.0" }
lightning-net-tokio = { version = "0.2.0" }
lightning-persister = { version = "0.2.0", features = [ "tokio" ] }
lightning-background-processor = { version = "0.2.0" }
lightning-rapid-gossip-sync = { version = "0.2.0" }
lightning-macros = { version = "0.2.0" }

base64 = "0.13.0"
bitcoin = "0.32"
bitcoin-bech32 = "0.12"
bech32 = "0.8"
libc = "0.2"

chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time", "io-std" ] }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
